Closed
Bug 44505
Opened 25 years ago
Closed 24 years ago
cell padding depends from table nesting for table-layout:fixed
Categories
(Core :: Layout: Tables, defect, P3)
Tracking
()
VERIFIED
FIXED
mozilla0.9
People
(Reporter: make, Assigned: karnaze)
Details
(Keywords: css1, testcase)
Attachments
(7 files)
From Bugzilla Helper:
User-Agent: Mozilla/4.73 [en] (WinNT; U)
BuildID: 2000070320
Tables using the fixed layout algorithm (table-layout:fixed) seem to ignore the
padding on all cells in a row (except on the first one).
Reproducible: Always
Steps to Reproduce:
1. Create a table with one row and some cells
2. Set css widths and paddings for each cell
3. Load the table
Actual Results: The paddding is ignored for all cells except the first one.
Expected Results: The padding should be applied to all cells where it has been
specified.
padding works fine when used with other table layout algorithms.
Reporter | ||
Comment 1•25 years ago
|
||
Reporter | ||
Comment 2•25 years ago
|
||
Bug seems to be related to nested tables. Couldn't reproduce with plain tables.
Keywords: testcase
Reporter | ||
Comment 3•25 years ago
|
||
Comment 4•25 years ago
|
||
Comment 5•25 years ago
|
||
The padding seems to depend on the table nesting (see reduced testcase).
Confirming the bug. Changing summary
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: padding is ignored on all but the first cell if table-layout:fixed → cell padding depends from table nesting for table-layout:fixed
Assignee | ||
Updated•25 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → M19
Updated•25 years ago
|
QA Contact: desale → chrisd
Comment 10•24 years ago
|
||
Finally, I managed to verify that the patch does not not break the table
regression tests. (It would be also very difficult, as we do not have any
testcase in the regression tests that tests for clipping ... this is a ping to
the QA engineer). The patch enables the overflow:hidden from CSS2 for table
cells. I think with the correct handling of the padding we outperfom with this
patch IE5. They have overflow:hidden for the fixed layout (you cannot make it
visible) and they do not handle padding correctly. This patch does not enable
overflow:scroll and overflow:auto, but I think it improves anyway our CSS2
compliance.
Comment 11•24 years ago
|
||
sr=attinasi - the patch looks fine. Can we add the testcase to the table
regression tests? Generally, Chris K. adds them and not a QA person. As you
mentioned, Bernd, we need a testcase in the regression suite to catch this case
and none currently exist. Thanks.
Comment 12•24 years ago
|
||
> Generally, Chris K. adds them and not a QA person.
But should this prevent chrisd@netscape.com to write something comparable to
marvin for CSS2 table stuff, I think we need it desperately.
Comment 13•24 years ago
|
||
The testcase renders now fine. fix checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 14•24 years ago
|
||
Please notice that the even the corrected testcase has an omitted padding
attribute for the third cell.
<TD nowrap style="text-align:left; 0px 5px 0px 5px; white-space:nowrap;
width:45px">45px</TD>
Assignee | ||
Updated•24 years ago
|
Target Milestone: --- → mozilla0.9
You need to log in
before you can comment on or make changes to this bug.
Description
•