enable the overflow:hidden from CSS2 for table cells (fixed layout) bug 44505. r=karnaze sr=attinasi